# nucleai

./: .coverage  .cursorrules  .env.example  .envrc  .envrc.build  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  AGENT_QUICKSTART.md  README.md  pyproject.toml  simdb_token_issue.md
.agent/rules/: codegen.md  plot_style.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  publish.yml
docs/: AI_SYSTEM_PROMPT.md  CODEGEN_FIRST_APPROACH.md  IMAS_ACCESS_INVESTIGATION.md  INTROSPECTION_VS_MCP.md  SIMDB_METADATA.md  VISION_FIRST_STRATEGY.md  VISION_IMPLEMENTATION_PLAN.md
nucleai/: __init__.py  _version.py
nucleai/agent/: core.py  tools.py
nucleai/cli/: __init__.py  main.py
nucleai/core/: __init__.py  config.py  exceptions.py  introspect.py  metadata.py  models.py
nucleai/db/: __init__.py  manager.py
nucleai/embeddings/: __init__.py  text.py
nucleai/features/: __init__.py
nucleai/imas/: __init__.py  exceptions.py  loader.py
nucleai/plot/: __init__.py  core.py
nucleai/search/: __init__.py  semantic.py  vector_store.py
nucleai/simdb/: __init__.py  auth.py  client.py  dataframe.py  metadata.py  models.py  parser.py
nucleai/storage/: __init__.py  duckdb.py  paths.py
scripts/: __init__.py  app.py  chat_cli.py  start_docs_server.py
tests/: conftest.py  test_nucleai.py
tests/core/: test_config.py  test_exceptions.py  test_introspect.py  test_models.py
tests/embeddings/: test_text.py
tests/search/: test_semantic.py  test_vector_store.py
tests/simdb/: test_auth.py  test_client.py  test_metadata.py  test_simdb_models.py
tests/test_imas/: __init__.py  test_uri.py
