[project]
name = "nucleai"
dynamic = ["version"]
description = "AI support for fusion experiments - feature extraction, embeddings, and natural language data analysis"
readme = "README.md"
authors = [
    { name = "Simon-McIntosh", email = "simon.mcintosh@iter.org" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "nucleai/_version.py"
