[project]
name = "nucleai"
dynamic = ["version"]
description = "AI support for fusion experiments - feature extraction, embeddings, and natural language data analysis"
readme = "README.md"
authors = [
    { name = "Simon-McIntosh", email = "simon.mcintosh@iter.org" }
]
requires-python = ">=3.12"
dependencies = [
    "anyio>=4.11.0",
    "chromadb>=1.3.5",
    "httpx>=0.28.1",
    "imas-python>=2.0.1",
    "imas-simdb",
    "matplotlib>=3.10.7",
    "openai>=2.8.1",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
]

[project.scripts]
docs-mcp-server = "scripts.start_docs_server:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "nucleai/_version.py"

[tool.uv.sources]
imas-simdb = { git = "https://github.com/iterorganization/SimDB.git", tag = "0.13.0" }

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.8.0",
    "pre-commit>=4.0.0",
    "pydocstyle>=6.3.0",
    "interrogate>=1.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["nucleai/_version.py"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T20",    # flake8-print
    "SIM",    # flake8-simplify
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "RET",    # flake8-return
    "ASYNC",  # flake8-async
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "T201",   # print found (ok for CLI tools)
]

[tool.ruff.lint.isort]
known-first-party = ["nucleai"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG", "S101"]  # Allow unused args and assert in tests

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--showlocals",
]

[tool.coverage.run]
source = ["nucleai"]
omit = [
    "nucleai/_version.py",
    "tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
fail_under = 95

[tool.pydocstyle]
convention = "google"
match = "(?!_version).*\\.py"
add-ignore = ["D100", "D104"]  # Missing docstring in public module/package

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-module = true
ignore-nested-functions = true
fail-under = 95
exclude = ["nucleai/_version.py", "tests"]
verbose = 2
